--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -3,11 +3,58 @@
 $rubik: 'Rubik', sans-serif;
 $karla: 'Karla', sans-serif;
 
+html,
+body {
+  height: 100%;
+  font-family: sans-serif;
+}
+
 body {
   font-family: $karla;
   font-size: 62.5%;
+  color: #222831;
 }
 
+/* 
+  Positioning of footer to bottom
+*/
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.content {
+  flex: 1 0 auto;
+  padding: 10px;
+}
+
+.footer {
+  flex-shrink: 0;
+  text-align: right;
+  background-color: #7971ea;
+  padding: 1rem;
+  color: white;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $rubik;
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+}
+
+h2 {
+  font-size: 2.6rem;
+}
 a {
   text-decoration: none;
 }
@@ -23,6 +70,9 @@ p {
   display: flex;
 }
 
+.container {
+  padding: 1.5rem;
+}
 /* 
   Header
 */
@@ -33,7 +83,6 @@ p {
 
 .navbar {
   justify-content: space-between;
-  padding: 1rem;
   flex-wrap: wrap;
 }
 
@@ -44,119 +93,167 @@ p {
 }
 
 .navbar-logo a {
-  color: #222831;
   font-size: 2rem;
+  color: #222831;
 }
 
 .navbar-logo p {
-  color: #7971ea;
   font-size: 1rem;
 }
 
-.navbar-nav {
-  width: 50%;
-  justify-content: flex-end;
+.navbar-logo span {
+  color: #7971ea;
 }
-
 .navbar .show-nav {
   display: flex;
 }
 
-@media screen and (max-width: 414px) {
-  .navbar-nav {
+.navbar-nav {
+  transition: all 1s;
+}
+
+.navbar-nav {
+  display: none;
+  flex-direction: column;
+  border-top: 0.1rem solid #7971ea;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0.5rem 0;
+  position: absolute;
+  left: 0;
+  top: 5.3rem;
+  background: #222831;
+}
+
+.navbar-nav li {
+  padding: 1rem 0;
+  margin-right: 1rem;
+}
+
+.navbar-nav a {
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+#toggle-icon {
+  width: 2rem;
+  height: 3rem;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+#toggle-icon span {
+  display: block;
+  position: absolute;
+  height: 0.2rem;
+  width: 2.5rem;
+  background: #222831;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+#toggle-icon span:nth-child(1) {
+  top: 0px;
+}
+
+#toggle-icon span:nth-child(2) {
+  top: 18px;
+}
+
+#toggle-icon span:nth-child(3) {
+  top: 36px;
+}
+
+#toggle-icon.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#toggle-icon.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+#toggle-icon.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+// Tablet / Desktop screen sizes
+@media screen and (min-width: 600px) {
+  .toggle-icon {
     display: none;
-    flex-direction: column;
-    height: 15vh;
-    width: 100%;
-    align-items: flex-end;
-    justify-content: flex-start;
-    padding: 0.5rem 0;
-    position: absolute;
-    left: 0;
-    top: 5.1rem;
-    background: #222831;
   }
 
-  .navbar-nav li {
-    padding: 0.5rem 0;
-    margin-right: 1rem;
+  .navbar-nav {
+    border-top: none;
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    height: auto;
+    align-items: flex-start;
+    justify-content: flex-start;
+    justify-content: flex-end;
+    padding: 0;
+    position: static;
+    background: none;
   }
 
   .navbar-nav a {
-    color: #fff;
-    font-size: 1rem;
-  }
-
-  // .toggle-icon span {
-  //   width: 2rem;
-  //   height: 0.2rem;
-  //   margin-bottom: 0.6rem;
-  //   border-radius: 10rem;
-  //   background-color: #393e46;
-  //   display: block;
-  // }
-  #toggle-icon {
-    width: 3rem;
-    height: 2rem;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-  }
-
-  #toggle-icon span {
-    display: block;
-    position: absolute;
-    height: 0.2rem;
-    width: 3rem;
-    background: #222831;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
-    transition: 0.25s ease-in-out;
-  }
-
-  #toggle-icon span:nth-child(1) {
-    top: 0px;
-  }
-
-  #toggle-icon span:nth-child(2) {
-    top: 18px;
-  }
-
-  #toggle-icon span:nth-child(3) {
-    top: 36px;
-  }
-
-  #toggle-icon.open span:nth-child(1) {
-    top: 18px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-
-  #toggle-icon.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-  }
-
-  #toggle-icon.open span:nth-child(3) {
-    top: 18px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
+    color: #333;
+    font-size: 1.2rem;
+    align-items: flex-start;
+    justify-items: flex-start;
   }
 }
+/* 
+  Hero
+*/
+
+.hero {
+  margin-top: 3rem;
+}
+
+.hero h2 {
+  font-size: 0.9rem;
+}
+
+.hero h2 span {
+  border-bottom: 0.1rem solid #7971ea;
+}
+
+// .hero .portfolio-button {
+//   margin-top: 4rem;
+//   text-align: center;
+// }
+
+// .hero .portfolio-button a {
+//   background: #222831;
+//   border-radius: 0.3rem;
+//   color: #fff;
+//   font-size: 1.2rem;
+//   padding: 0.8rem;
+// }
