--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -88,121 +88,120 @@ p {
   */
   justify-content: space-between;
   flex-wrap: wrap;
-
-  .navbar-logo {
-    flex-direction: column;
-    width: 50%;
-    justify-items: center;
-  }
-
-  .navbar-logo a {
-    font-size: 2rem;
-    color: #222831;
-  }
-
-  .navbar-logo p {
-    font-size: 1rem;
-  }
-
-  .navbar-logo span {
-    color: #7971ea;
-  }
-
-  .navbar-nav {
-    transition: all 1s;
-  }
-
-  .navbar-nav {
-    display: none;
-    flex-direction: column;
-    border-top: 0.1rem solid #7971ea;
-    height: 100vh;
-    width: 100%;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 0.5rem 0;
-    position: absolute;
-    left: 0;
-    top: 5.3rem;
-    background: #222831;
-  }
-
-  .navbar-nav li {
-    padding: 1rem 0;
-    margin-right: 1rem;
-  }
-
-  .navbar-nav a {
-    color: #fff;
-    font-size: 1.5rem;
-  }
-
-  #toggle-icon {
-    width: 2rem;
-    height: 3rem;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.5s ease-in-out;
-    -moz-transition: 0.5s ease-in-out;
-    -o-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-  }
-
-  #toggle-icon span {
-    display: block;
-    position: absolute;
-    height: 0.2rem;
-    width: 2.5rem;
-    background: #222831;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
-    transition: 0.25s ease-in-out;
-  }
-
-  #toggle-icon span:nth-child(1) {
-    top: 0px;
-  }
-
-  #toggle-icon span:nth-child(2) {
-    top: 18px;
-  }
-
-  #toggle-icon span:nth-child(3) {
-    top: 36px;
-  }
-
-  #toggle-icon.open span:nth-child(1) {
-    top: 18px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-
-  #toggle-icon.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-  }
-
-  #toggle-icon.open span:nth-child(3) {
-    top: 18px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-  }
 }
 
+.navbar-logo {
+  flex-direction: column;
+  width: 50%;
+  justify-items: center;
+}
+
+.navbar-logo a {
+  font-size: 2rem;
+  color: #222831;
+}
+
+.navbar-logo p {
+  font-size: 1rem;
+}
+
+.navbar-logo span {
+  color: #7971ea;
+}
+
+.navbar-nav {
+  transition: all 1s;
+}
+
+.navbar-nav {
+  display: none;
+  flex-direction: column;
+  border-top: 0.1rem solid #7971ea;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0.5rem 0;
+  position: absolute;
+  left: 0;
+  top: 5.3rem;
+  background: #222831;
+}
+
+.navbar-nav li {
+  padding: 1rem 0;
+  margin-right: 1rem;
+}
+
+.navbar-nav a {
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+#toggle-icon {
+  width: 2rem;
+  height: 3rem;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+#toggle-icon span {
+  display: block;
+  position: absolute;
+  height: 0.2rem;
+  width: 2.5rem;
+  background: #222831;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+#toggle-icon span:nth-child(1) {
+  top: 0px;
+}
+
+#toggle-icon span:nth-child(2) {
+  top: 18px;
+}
+
+#toggle-icon span:nth-child(3) {
+  top: 36px;
+}
+
+#toggle-icon.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#toggle-icon.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+#toggle-icon.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
 .navbar .show-nav {
   display: flex;
 }
@@ -252,5 +251,31 @@ p {
   About Page
 */
 
-.about h1 {
+.about h2 {
+  color: #7971ea;
+  font-size: 1.1rem;
+  margin: 1rem 0;
+  font-weight: 700;
+}
+
+.about h3 {
+  color: #7971ea;
+  font-size: 0.9rem;
+  margin: 1rem 0;
+  font-weight: 700;
+}
+
+.accent-color {
+  color: #7971ea;
+}
+
+.about p {
+  font-size: 1.1rem;
+  line-height: 1.3rem;
+}
+
+.about img {
+  width: 100%;
+  height: 50vh;
+  border-radius: 3%;
 }
