--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -33,7 +33,7 @@ body {
   flex-shrink: 0;
   text-align: right;
   background-color: #7971ea;
-  padding: 1rem;
+  padding: 1.5rem;
   color: white;
 }
 
@@ -245,8 +245,41 @@ p {
   h2 span {
     border-bottom: 0.1rem solid #7971ea;
   }
+
+  h3 {
+    color: #393e46;
+    font-size: 0.7rem;
+    margin-bottom: 1rem;
+  }
+
+  .hero {
+    height: 65vh;
+  }
+
+  .featured {
+    height: 100vh;
+  }
+
+  .feature {
+    background: #222831;
+    width: 100%;
+    height: 60vh;
+  }
 }
 
+@media screen and (min-width: 600px) {
+  .home h1 {
+    font-size: 4.4rem;
+  }
+
+  .home h2 {
+    font-size: 2rem;
+  }
+
+  .home h3 {
+    font-size: 1.2rem;
+  }
+}
 /* 
   About Page
 */
@@ -256,6 +289,10 @@ p {
   font-size: 1.1rem;
   margin: 1rem 0;
   font-weight: 700;
+}
+
+.about .flex-container {
+  flex-direction: column;
 }
 
 .about h3 {
@@ -271,11 +308,57 @@ p {
 
 .about p {
   font-size: 1.1rem;
-  line-height: 1.3rem;
+  line-height: 1.5rem;
 }
 
 .about img {
   width: 100%;
   height: 50vh;
   border-radius: 3%;
+  margin: 1rem 0;
+}
+
+.about .desktop-heading {
+  display: none;
+}
+
+@media screen and (min-width: 600px) {
+  .about p {
+  }
+
+  .about .mobile-heading {
+    display: none;
+  }
+
+  .about .desktop-heading {
+    display: block;
+  }
+
+  .about .flex-container {
+    flex-direction: row;
+  }
+
+  .about .flex-container div {
+    width: 35%;
+    margin-right: 2rem;
+  }
+
+  .about .flex-container div:last-of-type {
+    width: 55%;
+    margin-right: 0;
+  }
+
+  .about h1 {
+    margin-bottom: 2.4rem;
+  }
+
+  .about h2 {
+    font-size: 1.4rem;
+  }
+
+  .about img {
+    width: 100%;
+    height: 50vh;
+    border-radius: 3%;
+  }
 }
